# research-assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: run_research.py  smoke_test.py
src/research_assistant/: cli.py  main.py
src/research_assistant/agents/: base.py  curator.py  investigator.py  reporter.py
src/research_assistant/core/: model_router.py  settings.py  state.py
src/research_assistant/graph/: builder.py  nodes.py
src/research_assistant/human_input/: applier.py  parser.py
src/research_assistant/presentation/: display.py  prompts.py
src/research_assistant/tools/: search.py
tests/: test_agents.py  test_graph.py  test_human_applier.py  test_human_parser.py  test_model_router.py  test_presentation.py  test_state.py
